--- a/css/core/common.css
+++ b/css/core/common.css
@@ -6,10 +6,11 @@
 .nav-bar {
     height: 60px;
     background: rgba(48, 119, 160, .64);
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    font-size: 16px;
 }
 
 .nar-bar-title {
@@ -17,20 +18,34 @@
     line-height: 60px;
 }
 
-#menu {
+.channelSlanted{
+    font-family: 'ChannelSlanted2';
+}
+
+.navbar-nav > li > a {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.menu {
     height: 60px !important;
 }
 
-#menu li {
+.menu li {
     margin: 0 10px;
 }
 
-#menu a {
-    line-height: 60px !important;
-    padding: 0 10px;
+.menu li:hover a {
+    color: #0ebbff;
 }
 
-#menu .active {
+.menu a {
+    line-height: 60px !important;
+    padding: 0 10px;
+    color: white;
+}
+
+.menu .active {
     border-bottom: 2px solid #fbc229;
 }
 
@@ -284,6 +299,10 @@ img {
 
 .bgGray {
     background-color: #e6e6e6;
+}
+
+.bgBlue {
+    background: rgb(48, 119, 160);
 }
 
 .bgRed {
