--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 .left {
-    width: 300px;
+    width: 26%;
     float: left;
 }
 
 .right {
-    width: 852px;
+    width:  73%;
     float: right;
     padding: 20px;
 }
